ChangeTrackingPerformanceTest.java now working with script